Restructured repository to support Kafka. Removed Flask
Signed-off-by: Alessandro Tundo <alessandrotundo94@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,20 @@
 DOCKER_REGISTRY=
 IMAGE_TAG=latest
-FLASK_APP=app
-FLASK_ENV=development
-SERVICE_PORT=5002
+IMAGE_NAME=ngpaas/dynamic-dashboards-generator
+
+APP_NAME=dynamic_dashboard_generator
+DEBUG=True
+
+KAFKA_BROKERS=kafka:9092
+KAFKA_GROUP=dynamic_dashboard_generator
+KAFKA_TOPIC=monitoring_requests
+
 MONGO_URI=mongodb://dynamic-dashboards-generator-mongodb:27017/dynamic-dashboards-generator
+
+QUEUES=dashboards_creation
+
+REDIS_HOST=dynamic-dashboards-generator-redis
+REDIS_PORT=6379
+REDIS_DB=0
+
+SIMPLE_SETTINGS=settings
