--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,22 @@
 version: '3.6'
 services:
-  dynamic-dashboards-generator:
+  dynamic-dashboards-generator-redis:
+    image: redis:alpine
+  dynamic-dashboards-generator-mongodb:
+    image: mongo:3.7
     volumes:
-      - type: bind
-        source: ./src/app
-        target: /opt/dynamic-dashboards-generator/app
+      - dynamic-dashboards-generator-mongodb-configdb:/data/configdb
+      - dynamic-dashboards-generator-mongodb-db:/data/db
+  zookeeper:
+    image: wurstmeister/zookeeper
+  kafka:
+    image: wurstmeister/kafka:2.12-2.1.0
+    environment:
+      HOSTNAME_COMMAND: "echo $$(hostname)"
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_PORT: 9092
+      KAFKA_CREATE_TOPICS: "${KAFKA_TOPIC}:1:1"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+volumes:
+  dynamic-dashboards-generator-mongodb-configdb:
+  dynamic-dashboards-generator-mongodb-db:
