Added Elasticsearch + Kibana and Grafana to docker-compose.override.yml
Signed-off-by: Alessandro Tundo <alessandrotundo94@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,15 @@ KAFKA_BROKERS=kafka:9092
 KAFKA_GROUP=dynamic_dashboard_generator
 KAFKA_TOPIC=monitoring_requests
 
-MONGO_URI=mongodb://dynamic-dashboards-generator-mongodb:27017/dynamic-dashboards-generator
+ELASTICSEARCH_IMAGE_TAG=6.7.0
+KIBANA_IMAGE_TAG=6.7.0
+GRAFANA_IMAGE_TAG=6.0.2
+
+MONGO_URI=mongodb://mongodb:27017/dynamic-dashboards-generator
 
 QUEUES=dashboards_creation
 
-REDIS_HOST=dynamic-dashboards-generator-redis
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 
