--- a/src/prometheus/prometheus.yml
+++ b/src/prometheus/prometheus.yml
@@ -10,4 +10,4 @@ scrape_configs:
   - job_name: 'nodeexporter'
     scrape_interval: 5s
     static_configs:
-      - targets: ['nodeexporter:9100']
+      - targets: ['localhost:9100']
